# fastapi-ca

./: CLAUDE.md  alembic.ini  database.py  docker-compose.yml  pyproject.toml  simple_dependencies.py
analysis/: di_comprehensive_analysis.md
examples/spring_di_demo/: README.md  __init__.py  demo_app.py  optimized_spring_di.py  spring_di.py
tests/spring_di/: __init__.py  performance_benchmark.py  stability_test.py  test_spring_di.py
